openmediavault (0.2.5.3) stable; urgency=low

  * Change Avahi (Zeroconf) listening port for SMB service from 139 to 445.
  * Improve implementation of log file handling. Output the last 100000 lines.
    Limitation can be modified via OMV_MAX_LOGFILE_LINES environment variable.
  * Mantis 0000005: PHP crashes when sorting bigger syslog files
  * Mantis 0000249: FTP MasqueradeAddress does not accept FQDN
  * Mantis 0000260: Using simple quote on comment give error

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Nov 2011 19:36:05 +0100

openmediavault (0.2.5.2) stable; urgency=low

  * Display use of shared folder
  * Mantis 0000105: Add ability to set additional network interface settings
  * Mantis 0000240: Allow empty primary/secondary DNS server

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Nov 2011 20:59:35 +0100

openmediavault (0.2.5.1) stable; urgency=low

  * Mantis 0000236: Allow more characters in share name

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Nov 2011 21:01:12 +0100

openmediavault (0.2.5) stable; urgency=low

  * Show the device where the operation system is installed on in
    'Storage | Physical Disks' and 'Storage | S.M.A.R.T.'
  * Set 'valid users = %S' for SMB/CIFS home directories
  * Use postfix to send email to secondary address via recipient_bcc_maps.
  * Mantis 0000230: Include Hostname within Email Subjects
  * Mantis 0000236: Allow more characters in share name

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Nov 2011 01:30:59 +0100

openmediavault (0.2.4.9.1) stable; urgency=low

  * Fix session timeout issue which prevents WebGUI login.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Nov 2011 19:12:49 +0100

openmediavault (0.2.4.9) stable; urgency=low

  * Improve hdparm.conf creation. Write meaningful options only.
  * Fix email notification for mdadm and cron-apt
  * Improve WebGUI login authentication
  * Mantis 0000220: CRON-APT Email From is Wrong